parser/BugParser.py
# Generated from BugParser.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class BugParser ( Parser ):

    grammarFileName = "BugParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'for'", "'in'", "'let'", 
                     "'trait'", "'implements'", "'data'", "'export'", "'import'", 
                     "'function'", "'return'", "'void'", "'i32'", "'char'", 
                     "'boolean'", "'{'", "'}'", "'('", "')'", "'['", "']'", 
                     "'.'", "','", "';'", "'::'", "':'", "'->'", "'+'", 
                     "'-'", "'*'", "'/'", "'&'", "'|'", "'<'", "'>'", "'=='", 
                     "'='", "'~'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'${'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "FOR", "IN", "LET", "TRAIT", 
                      "IMPLEMENTS", "DATA", "EXPORT", "IMPORT", "FUNCTION", 
                      "RETURN", "VOID", "I32", "CHAR", "BOOLEAN", "LBRACE", 
                      "RBRACE", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
                      "DOT", "COMMA", "SEMI", "DOUBLE_COLON", "COLON", "ARROW", 
                      "ADD", "SUB", "MUL", "DIV", "AND", "OR", "LT", "GT", 
                      "EQEQ", "EQ", "NOT", "INTEGER", "IDENTIFIER", "OPEN_STRING", 
                      "LINE_COMMENT", "WS", "START_EXPR", "END_EXPR", "CLOSE_STRING", 
                      "TEXT" ]

    RULE_program = 0
    RULE_importStatements = 1
    RULE_importStatement = 2
    RULE_functionDef = 3
    RULE_trait = 4
    RULE_traitName = 5
    RULE_traitFunctionDef = 6
    RULE_traitFunctionName = 7
    RULE_data = 8
    RULE_dataName = 9
    RULE_dataList = 10
    RULE_functionBody = 11
    RULE_statements = 12
    RULE_statement = 13
    RULE_returnStatement = 14
    RULE_statementExpression = 15
    RULE_forLoop = 16
    RULE_ifStatement = 17
    RULE_letStatement = 18
    RULE_returnTypeName = 19
    RULE_parameterList = 20
    RULE_typedVariable = 21
    RULE_functionName = 22
    RULE_variableName = 23
    RULE_expression = 24
    RULE_literal = 25
    RULE_string = 26
    RULE_stringPart = 27
    RULE_argumentList = 28
    RULE_argument = 29
    RULE_typeName = 30

    ruleNames =  [ "program", "importStatements", "importStatement", "functionDef", 
                   "trait", "traitName", "traitFunctionDef", "traitFunctionName", 
                   "data", "dataName", "dataList", "functionBody", "statements", 
                   "statement", "returnStatement", "statementExpression", 
                   "forLoop", "ifStatement", "letStatement", "returnTypeName", 
                   "parameterList", "typedVariable", "functionName", "variableName", 
                   "expression", "literal", "string", "stringPart", "argumentList", 
                   "argument", "typeName" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    FOR=3
    IN=4
    LET=5
    TRAIT=6
    IMPLEMENTS=7
    DATA=8
    EXPORT=9
    IMPORT=10
    FUNCTION=11
    RETURN=12
    VOID=13
    I32=14
    CHAR=15
    BOOLEAN=16
    LBRACE=17
    RBRACE=18
    LPAREN=19
    RPAREN=20
    LBRACK=21
    RBRACK=22
    DOT=23
    COMMA=24
    SEMI=25
    DOUBLE_COLON=26
    COLON=27
    ARROW=28
    ADD=29
    SUB=30
    MUL=31
    DIV=32
    AND=33
    OR=34
    LT=35
    GT=36
    EQEQ=37
    EQ=38
    NOT=39
    INTEGER=40
    IDENTIFIER=41
    OPEN_STRING=42
    LINE_COMMENT=43
    WS=44
    START_EXPR=45
    END_EXPR=46
    CLOSE_STRING=47
    TEXT=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importStatements(self):
            return self.getTypedRuleContext(BugParser.ImportStatementsContext,0)


        def EOF(self):
            return self.getToken(BugParser.EOF, 0)

        def trait(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BugParser.TraitContext)
            else:
                return self.getTypedRuleContext(BugParser.TraitContext,i)


        def data(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BugParser.DataContext)
            else:
                return self.getTypedRuleContext(BugParser.DataContext,i)


        def functionDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BugParser.FunctionDefContext)
            else:
                return self.getTypedRuleContext(BugParser.FunctionDefContext,i)


        def getRuleIndex(self):
            return BugParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BugParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.importStatements()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BugParser.TRAIT) | (1 << BugParser.DATA) | (1 << BugParser.EXPORT) | (1 << BugParser.FUNCTION))) != 0):
                self.state = 66
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 63
                    self.trait()
                    pass

                elif la_ == 2:
                    self.state = 64
                    self.data()
                    pass

                elif la_ == 3:
                    self.state = 65
                    self.functionDef()
                    pass


                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self.match(BugParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BugParser.ImportStatementContext)
            else:
                return self.getTypedRuleContext(BugParser.ImportStatementContext,i)


        def getRuleIndex(self):
            return BugParser.RULE_importStatements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStatements" ):
                listener.enterImportStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStatements" ):
                listener.exitImportStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStatements" ):
                return visitor.visitImportStatements(self)
            else:
                return visitor.visitChildren(self)




    def importStatements(self):

        localctx = BugParser.ImportStatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importStatements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BugParser.IMPORT:
                self.state = 73
                self.importStatement()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(BugParser.IMPORT, 0)

        def variableName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BugParser.VariableNameContext)
            else:
                return self.getTypedRuleContext(BugParser.VariableNameContext,i)


        def SEMI(self):
            return self.getToken(BugParser.SEMI, 0)

        def DOUBLE_COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BugParser.DOUBLE_COLON)
            else:
                return self.getToken(BugParser.DOUBLE_COLON, i)

        def getRuleIndex(self):
            return BugParser.RULE_importStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStatement" ):
                listener.enterImportStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStatement" ):
                listener.exitImportStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStatement" ):
                return visitor.visitImportStatement(self)
            else:
                return visitor.visitChildren(self)




    def importStatement(self):

        localctx = BugParser.ImportStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(BugParser.IMPORT)
            self.state = 80
            self.variableName()
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BugParser.DOUBLE_COLON:
                self.state = 81
                self.match(BugParser.DOUBLE_COLON)
                self.state = 82
                self.variableName()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(BugParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BugParser.FUNCTION, 0)

        def functionName(self):
            return self.getTypedRuleContext(BugParser.FunctionNameContext,0)


        def LPAREN(self):
            return self.getToken(BugParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(BugParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(BugParser.COLON, 0)

        def returnTypeName(self):
            return self.getTypedRuleContext(BugParser.ReturnTypeNameContext,0)


        def LBRACE(self):
            return self.getToken(BugParser.LBRACE, 0)

        def functionBody(self):
            return self.getTypedRuleContext(BugParser.FunctionBodyContext,0)


        def RBRACE(self):
            return self.getToken(BugParser.RBRACE, 0)

        def EXPORT(self):
            return self.getToken(BugParser.EXPORT, 0)

        def parameterList(self):
            return self.getTypedRuleContext(BugParser.ParameterListContext,0)


        def getRuleIndex(self):
            return BugParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDef(self):

        localctx = BugParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BugParser.EXPORT:
                self.state = 90
                self.match(BugParser.EXPORT)


            self.state = 93
            self.match(BugParser.FUNCTION)
            self.state = 94
            self.functionName()
            self.state = 95
            self.match(BugParser.LPAREN)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BugParser.IDENTIFIER:
                self.state = 96
                self.parameterList()


            self.state = 99
            self.match(BugParser.RPAREN)
            self.state = 100
            self.match(BugParser.COLON)
            self.state = 101
            self.returnTypeName()
            self.state = 102
            self.match(BugParser.LBRACE)
            self.state = 103
            self.functionBody()
            self.state = 104
            self.match(BugParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TraitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRAIT(self):
            return self.getToken(BugParser.TRAIT, 0)

        def traitName(self):
            return self.getTypedRuleContext(BugParser.TraitNameContext,0)


        def LBRACE(self):
            return self.getToken(BugParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(BugParser.RBRACE, 0)

        def traitFunctionDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BugParser.TraitFunctionDefContext)
            else:
                return self.getTypedRuleContext(BugParser.TraitFunctionDefContext,i)


        def getRuleIndex(self):
            return BugParser.RULE_trait

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrait" ):
                listener.enterTrait(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrait" ):
                listener.exitTrait(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrait" ):
                return visitor.visitTrait(self)
            else:
                return visitor.visitChildren(self)




    def trait(self):

        localctx = BugParser.TraitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_trait)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(BugParser.TRAIT)
            self.state = 107
            self.traitName()
            self.state = 108
            self.match(BugParser.LBRACE)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BugParser.FUNCTION:
                self.state = 109
                self.traitFunctionDef()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(BugParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TraitNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BugParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return BugParser.RULE_traitName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTraitName" ):
                listener.enterTraitName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTraitName" ):
                listener.exitTraitName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTraitName" ):
                return visitor.visitTraitName(self)
            else:
                return visitor.visitChildren(self)




    def traitName(self):

        localctx = BugParser.TraitNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_traitName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(BugParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TraitFunctionDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BugParser.FUNCTION, 0)

        def traitFunctionName(self):
            return self.getTypedRuleContext(BugParser.TraitFunctionNameContext,0)


        def LPAREN(self):
            return self.getToken(BugParser.LPAREN, 0)

        def parameterList(self):
            return self.getTypedRuleContext(BugParser.ParameterListContext,0)


        def RPAREN(self):
            return self.getToken(BugParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(BugParser.COLON, 0)

        def returnTypeName(self):
            return self.getTypedRuleContext(BugParser.ReturnTypeNameContext,0)


        def SEMI(self):
            return self.getToken(BugParser.SEMI, 0)

        def getRuleIndex(self):
            return BugParser.RULE_traitFunctionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTraitFunctionDef" ):
                listener.enterTraitFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTraitFunctionDef" ):
                listener.exitTraitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTraitFunctionDef" ):
                return visitor.visitTraitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def traitFunctionDef(self):

        localctx = BugParser.TraitFunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_traitFunctionDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(BugParser.FUNCTION)
            self.state = 120
            self.traitFunctionName()
            self.state = 121
            self.match(BugParser.LPAREN)
            self.state = 122
            self.parameterList()
            self.state = 123
            self.match(BugParser.RPAREN)
            self.state = 124
            self.match(BugParser.COLON)
            self.state = 125
            self.returnTypeName()
            self.state = 126
            self.match(BugParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TraitFunctionNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BugParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return BugParser.RULE_traitFunctionName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTraitFunctionName" ):
                listener.enterTraitFunctionName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTraitFunctionName" ):
                listener.exitTraitFunctionName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTraitFunctionName" ):
                return visitor.visitTraitFunctionName(self)
            else:
                return visitor.visitChildren(self)




    def traitFunctionName(self):

        localctx = BugParser.TraitFunctionNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_traitFunctionName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(BugParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATA(self):
            return self.getToken(BugParser.DATA, 0)

        def dataName(self):
            return self.getTypedRuleContext(BugParser.DataNameContext,0)


        def LPAREN(self):
            return self.getToken(BugParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(BugParser.RPAREN, 0)

        def EXPORT(self):
            return self.getToken(BugParser.EXPORT, 0)

        def dataList(self):
            return self.getTypedRuleContext(BugParser.DataListContext,0)


        def IMPLEMENTS(self):
            return self.getToken(BugParser.IMPLEMENTS, 0)

        def traitName(self):
            return self.getTypedRuleContext(BugParser.TraitNameContext,0)


        def LBRACE(self):
            return self.getToken(BugParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(BugParser.RBRACE, 0)

        def functionDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BugParser.FunctionDefContext)
            else:
                return self.getTypedRuleContext(BugParser.FunctionDefContext,i)


        def getRuleIndex(self):
            return BugParser.RULE_data

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData" ):
                listener.enterData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData" ):
                listener.exitData(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData" ):
                return visitor.visitData(self)
            else:
                return visitor.visitChildren(self)




    def data(self):

        localctx = BugParser.DataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_data)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BugParser.EXPORT:
                self.state = 130
                self.match(BugParser.EXPORT)


            self.state = 133
            self.match(BugParser.DATA)
            self.state = 134
            self.dataName()
            self.state = 135
            self.match(BugParser.LPAREN)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BugParser.IDENTIFIER:
                self.state = 136
                self.dataList()


            self.state = 139
            self.match(BugParser.RPAREN)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BugParser.IMPLEMENTS:
                self.state = 140
                self.match(BugParser.IMPLEMENTS)
                self.state = 141
                self.traitName()


            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BugParser.LBRACE:
                self.state = 144
                self.match(BugParser.LBRACE)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BugParser.EXPORT or _la==BugParser.FUNCTION:
                    self.state = 145
                    self.functionDef()
                    self.state = 150
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 151
                self.match(BugParser.RBRACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BugParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return BugParser.RULE_dataName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataName" ):
                listener.enterDataName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataName" ):
                listener.exitDataName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataName" ):
                return visitor.visitDataName(self)
            else:
                return visitor.visitChildren(self)




    def dataName(self):

        localctx = BugParser.DataNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dataName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(BugParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._typedVariable = None # TypedVariableContext
            self.params = list() # of TypedVariableContexts

        def typedVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BugParser.TypedVariableContext)
            else:
                return self.getTypedRuleContext(BugParser.TypedVariableContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BugParser.COMMA)
            else:
                return self.getToken(BugParser.COMMA, i)

        def getRuleIndex(self):
            return BugParser.RULE_dataList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataList" ):
                listener.enterDataList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataList" ):
                listener.exitDataList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataList" ):
                return visitor.visitDataList(self)
            else:
                return visitor.visitChildren(self)




    def dataList(self):

        localctx = BugParser.DataListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_dataList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            localctx._typedVariable = self.typedVariable()
            localctx.params.append(localctx._typedVariable)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BugParser.COMMA:
                self.state = 157
                self.match(BugParser.COMMA)
                self.state = 158
                localctx._typedVariable = self.typedVariable()
                localctx.params.append(localctx._typedVariable)
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(BugParser.StatementsContext,0)


        def getRuleIndex(self):
            return BugParser.RULE_functionBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionBody" ):
                listener.enterFunctionBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionBody" ):
                listener.exitFunctionBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionBody" ):
                return visitor.visitFunctionBody(self)
            else:
                return visitor.visitChildren(self)




    def functionBody(self):

        localctx = BugParser.FunctionBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functionBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.statements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BugParser.StatementContext)
            else:
                return self.getTypedRuleContext(BugParser.StatementContext,i)


        def getRuleIndex(self):
            return BugParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = BugParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BugParser.IF) | (1 << BugParser.FOR) | (1 << BugParser.LET) | (1 << BugParser.RETURN) | (1 << BugParser.LPAREN) | (1 << BugParser.SUB) | (1 << BugParser.NOT) | (1 << BugParser.INTEGER) | (1 << BugParser.IDENTIFIER) | (1 << BugParser.OPEN_STRING))) != 0):
                self.state = 166
                self.statement()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forLoop(self):
            return self.getTypedRuleContext(BugParser.ForLoopContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(BugParser.IfStatementContext,0)


        def letStatement(self):
            return self.getTypedRuleContext(BugParser.LetStatementContext,0)


        def statementExpression(self):
            return self.getTypedRuleContext(BugParser.StatementExpressionContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(BugParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return BugParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):
